fix(search-bar): story title + select disabled + button align

--- a/packages-new/components/button/src/components/osds-button/osds-button.scss
+++ b/packages-new/components/button/src/components/osds-button/osds-button.scss
@@ -41,6 +41,10 @@
       position: relative;
       max-width: inherit;
     }
+
+    .button__centered-text {
+      display: inline-flex;
+    }
   }
 
   @include osds-button-on-main-element() {
